Use new Java 14 language features
So much `var`. I love it.