@@ -1,11 +1,8 @@
 package ca.on.oicr.gsi.shesmu.compiler;
 
-import ca.on.oicr.gsi.shesmu.compiler.definitions.GangDefinition;
 import ca.on.oicr.gsi.shesmu.compiler.definitions.GangElement;
 import ca.on.oicr.gsi.shesmu.compiler.definitions.InputFormatDefinition;
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -14,7 +11,7 @@ public class PickNodeGang extends PickNode {
   private final int line;
   private final int column;
   private final String name;
-  private List<String> names = Collections.emptyList();
+  private List<String> names = List.of();
 
   public PickNodeGang(int line, int column, String name) {
     super();
@@ -25,9 +22,8 @@ public class PickNodeGang extends PickNode {
 
   @Override
   public boolean isGood(InputFormatDefinition inputFormat, Consumer<String> errorHandler) {
-    final Optional<? extends GangDefinition> result =
-        inputFormat.gangs().filter(g -> g.name().equals(name)).findFirst();
-    if (!result.isPresent()) {
+    final var result = inputFormat.gangs().filter(g -> g.name().equals(name)).findFirst();
+    if (result.isEmpty()) {
       errorHandler.accept(String.format("%d:%d: Unknown gang “%s”.", line, column, name));
     } else {
       names = result.get().elements().map(GangElement::name).collect(Collectors.toList());
