@@ -1,7 +1,6 @@
 package ca.on.oicr.gsi.shesmu;
 
 import ca.on.oicr.gsi.Pair;
-import ca.on.oicr.gsi.shesmu.plugin.grouper.Grouper;
 import ca.on.oicr.gsi.shesmu.runtime.LaneSplittingGrouper;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -12,33 +11,33 @@ public class LaneSplittingGrouperTest {
 
   @Test
   public void testEmpty() {
-    final Grouper<Pair<Long, String>, Set<String>> grouper =
-        new LaneSplittingGrouper<>(
-            i -> Collections.emptyList(),
+    final var grouper =
+        new LaneSplittingGrouper<Pair<Long, String>, String, Set<String>>(
+            i -> List.of(),
             i ->
                 Character.isAlphabetic(i.second().charAt(0))
                     ? Optional.of(i.second())
                     : Optional.empty(),
             Pair::first,
             g -> (o, i) -> o.add(i.second()));
-    final Set<Integer> outputs =
+    final var outputs =
         grouper
             .group(
-                Arrays.asList(
+                List.of(
                     new Pair<>(1L, "A"),
                     new Pair<>(1L, "B"),
                     new Pair<>(1L, "0"),
                     new Pair<>(2L, "2")))
             .map(s -> s.build(i -> new TreeSet<>()).size())
             .collect(Collectors.toSet());
-    Assertions.assertEquals(Collections.emptySet(), outputs);
+    Assertions.assertEquals(Set.of(), outputs);
   }
 
   @Test
   public void testJunkInSyntheticLane() {
-    final List<List<Long>> partitions = Collections.singletonList(Arrays.asList(1L, 2L));
-    final Grouper<Pair<Long, String>, Set<String>> grouper =
-        new LaneSplittingGrouper<>(
+    final var partitions = List.of(List.of(1L, 2L));
+    final var grouper =
+        new LaneSplittingGrouper<Pair<Long, String>, String, Set<String>>(
             i -> partitions,
             i ->
                 Character.isAlphabetic(i.second().charAt(0))
@@ -46,10 +45,10 @@ public class LaneSplittingGrouperTest {
                     : Optional.empty(),
             Pair::first,
             g -> (o, i) -> o.add(i.second()));
-    final Set<Integer> outputs =
+    final var outputs =
         grouper
             .group(
-                Arrays.asList(
+                List.of(
                     new Pair<>(1L, "A"),
                     new Pair<>(1L, "B"),
                     new Pair<>(1L, "0"),
@@ -57,14 +56,14 @@ public class LaneSplittingGrouperTest {
                     new Pair<>(2L, "C")))
             .map(s -> s.build(i -> new TreeSet<>()).size())
             .collect(Collectors.toSet());
-    Assertions.assertEquals(Collections.emptySet(), outputs);
+    Assertions.assertEquals(Set.of(), outputs);
   }
 
   @Test
   public void testTwoJoinedPartitions() {
-    final List<List<Long>> partitions = Collections.singletonList(Arrays.asList(1L, 2L));
-    final Grouper<Pair<Long, String>, Set<String>> grouper =
-        new LaneSplittingGrouper<>(
+    final var partitions = List.of(List.of(1L, 2L));
+    final var grouper =
+        new LaneSplittingGrouper<Pair<Long, String>, String, Set<String>>(
             i -> partitions,
             i ->
                 Character.isAlphabetic(i.second().charAt(0))
@@ -72,24 +71,24 @@ public class LaneSplittingGrouperTest {
                     : Optional.empty(),
             Pair::first,
             g -> (o, i) -> o.add(i.second()));
-    final Set<Integer> outputs =
+    final var outputs =
         grouper
             .group(
-                Arrays.asList(
+                List.of(
                     new Pair<>(1L, "A"),
                     new Pair<>(1L, "B"),
                     new Pair<>(1L, "0"),
                     new Pair<>(2L, "2")))
             .map(s -> s.build(i -> new TreeSet<>()).size())
             .collect(Collectors.toSet());
-    Assertions.assertEquals(new TreeSet<>(Collections.singletonList(4)), outputs);
+    Assertions.assertEquals(new TreeSet<>(List.of(4)), outputs);
   }
 
   @Test
   public void testTwoJoinedPartitionsWithDuplicates() {
-    final List<List<Long>> partitions = Collections.singletonList(Arrays.asList(1L, 2L));
-    final Grouper<Pair<Long, String>, Set<String>> grouper =
-        new LaneSplittingGrouper<>(
+    final var partitions = List.of(List.of(1L, 2L));
+    final var grouper =
+        new LaneSplittingGrouper<Pair<Long, String>, String, Set<String>>(
             i -> partitions,
             i ->
                 Character.isAlphabetic(i.second().charAt(0))
@@ -97,10 +96,10 @@ public class LaneSplittingGrouperTest {
                     : Optional.empty(),
             Pair::first,
             g -> (o, i) -> o.add(i.second()));
-    final Set<Integer> outputs =
+    final var outputs =
         grouper
             .group(
-                Arrays.asList(
+                List.of(
                     new Pair<>(1L, "A"),
                     new Pair<>(1L, "B"),
                     new Pair<>(1L, "0"),
@@ -109,15 +108,14 @@ public class LaneSplittingGrouperTest {
                     new Pair<>(2L, "B")))
             .map(s -> s.build(i -> new TreeSet<>()).size())
             .collect(Collectors.toSet());
-    Assertions.assertEquals(new TreeSet<>(Collections.singletonList(4)), outputs);
+    Assertions.assertEquals(new TreeSet<>(List.of(4)), outputs);
   }
 
   @Test
   public void testTwoPartitions() {
-    final List<List<Long>> partitions =
-        Arrays.asList(Collections.singletonList(1L), Collections.singletonList(2L));
-    final Grouper<Pair<Long, String>, Set<String>> grouper =
-        new LaneSplittingGrouper<>(
+    final var partitions = List.of(List.of(1L), List.of(2L));
+    final var grouper =
+        new LaneSplittingGrouper<Pair<Long, String>, String, Set<String>>(
             i -> partitions,
             i ->
                 Character.isAlphabetic(i.second().charAt(0))
@@ -125,7 +123,7 @@ public class LaneSplittingGrouperTest {
                     : Optional.empty(),
             Pair::first,
             g -> (o, i) -> o.add(i.second()));
-    final Set<Integer> outputs =
+    final var outputs =
         grouper
             .group(
                 Arrays.asList(
